Fixed bug #30702 (cannot initialize class variable from class constant)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@185162 c90b9560-bf6c-de11-be94-00142212c4b1